fixed navbart spacing, added png of contact info and centeredit

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
 nav {
     background-color: black;
+    margin-bottom: 0;
+}
+
+ul {
+ list-style: none;
+}
+
+.center-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
 }
